# omar

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  ISSUE.md  ISSUES.md  Makefile  README.md  TODO.md  docker-compose.yml  install.sh  meeting-minutes-task-injection.md
.claude/: settings.json
.github/: release.yml
.github/workflows/: ci.yml  opencode-nightly.yml  release.yml
bridges/computer/: Cargo.toml  README.md
bridges/computer/src/: computer.rs  main.rs  server.rs
bridges/slack/: Cargo.toml  README.md
bridges/slack/src/: bridge.rs  config.rs  main.rs  omar.rs  server.rs  settings.rs  slack.rs
docker/: config.toml  entrypoint.sh
docs/: api-design.md  design.md  edge_case_audit.md  formal_verification.md  impl.md  manager-agent-design.md  multi_ea_final_spec.md  multi_ea_verification_report.md  sandbox-design.md  smt_verification.md  sygus_verification.md  theorem_proofs.md
kernel/: Makefile  kernel.c  linker.ld
kernel/boot/: boot.asm
kernel/cpu/: ports.h
kernel/drivers/: vga.c  vga.h
kernel/lib/: printf.c  printf.h  string.c  string.h
lang/: Main.lean  README.md  Tests.lean  lake-manifest.json  lakefile.lean  spec.md
lang/Omar/: Compiler.lean
prompts/: agent.md  executive-assistant.md  manager.md  project-factory.md  project-manager.md  watchdog.md  worker.md
prompts/debug/: gui-with-computer-bridge.md
prompts/demos/: swarm-15.md
prompts/skills/: computer-use.md  demo.md  heterogeneous-backends.md
prompts/tests/: binary-tree-127-agents.md  compiler.md  flat-100-agents.md  project-factory.md
scripts/: docker-sanity.sh  docker-shell.sh  omar-docker.sh
src/: app.rs  backend_probe.rs  computer.rs  config.rs  ea.rs  event.rs  main.rs  mcp.rs  memory.rs  metrics.rs  omar.rs  panic_hook.rs  paths.rs  process.rs  projects.rs  rooms.rs  settings.rs  tasks.rs  topology.rs
src/api/: handlers.rs  mod.rs  models.rs
src/manager/: mod.rs  protocol.rs
src/sandbox/: config.rs  docker.rs  mod.rs  none.rs
src/scheduler/: event.rs  mod.rs
src/tmux/: client.rs  health.rs  mod.rs  session.rs
src/ui/: dashboard.rs  dataflow.rs  mod.rs
tests/: computer_use_test.rs  integration_test.rs
tests/ci/: dashboard_relaunch_handoff.sh  opencode_binary_tree.sh  tmux_codex_fallback.sh  tmux_ea_selector_zero.sh  tmux_exit_behavior.sh  tmux_manager_legacy_recovery.sh  tmux_popup_quote.sh  tmux_unresolved_session.sh
tests/topology/: HR.omar  HRCodex.omar
tmp/: bandaid_findings.md  diff_app.txt  diff_computer.txt  diff_config.txt  diff_dashboard.txt  diff_ea.txt  diff_manager.txt  diff_memory.txt  diff_process.txt  diff_projects.txt  diff_prompts.txt  diff_scheduler.txt  diff_slack.txt  diff_tmux_client.txt  diff_tmux_mod.txt  final_status.md  main_api_models.rs  main_diff.txt  parity_audit_status.md  parity_findings.md
