[workspace]
members = [".", "bridges/slack", "bridges/computer"]
default-members = [".", "bridges/slack", "bridges/computer"]

[package]
name = "omar"
version = "0.2.5"
edition = "2021"
description = "Agent dashboard for tmux"
license = "MIT"
default-run = "omar"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
ansi-to-tui = "7"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tracing = "0.1.44"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[[bin]]
name = "omar"
path = "src/main.rs"
