[package]
name = "omar-computer-bridge"
version = "0.1.0"
edition = "2021"
description = "Computer-use HTTP bridge for OMAR — exposes mouse, keyboard, and screenshot control via REST"

[[bin]]
name = "omar-computer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
axum = "0.7"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
