[package]
name = "omar-slack-bridge"
version = "0.1.0"
edition = "2021"
description = "Slack bridge for OMAR — connects Slack channels to OMAR agents via Socket Mode"

[[bin]]
name = "omar-slack"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
